# svdynamics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree
docs/_modules/: index.html
docs/_modules/svdynamics/: kernels.html  svm.html
docs/_sources/: api.rst.txt  index.rst.txt
docs/_static/: documentation_options.js
py_example_scripts/: make_classification.py  svd_regression.py  svm_smote.py
source/: conf.py  getting_started.rst
src/support_vector_dynamics/: svm.py  utils.py
src/svdynamics/: __init__.py  kernels.py  logo.py  svm.py
tests/: test_composite_kernel.py  test_svd_classifier.py  test_svd_regressor.py
